Improving examples, adding hover effect disable

--- a/src/index.html
+++ b/src/index.html
@@ -248,6 +248,73 @@
 	        	</div>
 	        </div>
 
+		</div>
+		<div class="span4">
+
+	        <div class="squarewrapper">
+	        	<div class="square">
+					<div class="circleCog nohover">
+						<div class="segmentwrapper segment1">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment2">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment3">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment4">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment5">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment6">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment7">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment8">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+					</div>
+	        	</div>
+	        </div>
+
+		</div>		
+		<div class="span4">
+
+	        <div class="squarewrapper">
+	        	<div class="square">
+					<div class="circleCog2 nohover">
+						<div class="segmentwrapper segment1">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment2">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment3">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment4">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment5">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment6">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment7">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+						<div class="segmentwrapper segment8">
+							<div class="segment"><div class="inner"></div></div>
+						</div>
+					</div>
+	        	</div>
+	        </div>
 
 		</div>
 		</div>
